feat(shared|scenario): remove orderBy pipe, create utils file with orderBy method and update behaviour of scenario list simple to use it

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -39,7 +39,7 @@
 </div>
 
 <nb-accordion
-  *ngFor="let scenario of scenarios | orderBy: orderBy:orderByReverse:'name'"
+  *ngFor="let scenario of scenarios"
   class="mb-2"
   [class.selected]="selectedScenario?.id === scenario.id"
 >
