--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
@@ -94,6 +94,7 @@
         [selectedScenario]="scenarioEdit"
         (onEdit)="addOrEditScenario($event)"
         (onDelete)="delete($event)"
+        (onOrderBy)="orderBy($event)"
       ></tock-scenario-list-simple>
 
       <tock-scenario-tree
