feat(scenario|shared): remove orderBy pipe from module, add truncate css to accordion item in scenario list

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenario-list-simple/scenario-list-simple.component.html
@@ -50,7 +50,7 @@
           <div class="font-weight-bold initial-capitalize">
             {{ scenario.name }}
           </div>
-          <span class="text-muted">
+          <span class="text-muted truncate">
             {{ scenario.description }}
           </span>
         </div>
