feat(scenario-conception): intent-create set intents primary attribute

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-create/intent-create.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-create/intent-create.component.html
@@ -2,8 +2,8 @@
   <nb-card-header class="d-flex justify-content-between align-items-start">
     <div>
       <h4>Create a new intent</h4>
-      There is no existing intention corresponding to the label "{{ intentSentence }}". Please
-      define one below.
+      There is no existing intention corresponding to the label "{{ item.text }}". Please define one
+      below.
     </div>
     <button
       nbButton
