--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.html
@@ -5,7 +5,7 @@
   (onMouseWheel)="mouseWheel($event)"
 >
   <div
-    *ngIf="scenario.mode == SCENARIO_MODE.casting"
+    *ngIf="scenario.data.mode == SCENARIO_MODE.casting"
     class="contexts-panel pointer"
     [ngClass]="{ displayed: contextsPanelDisplayed }"
     appMouseWheelListner
@@ -105,7 +105,7 @@
           [scenarioItems]="scenario.data.scenarioItems"
           [contexts]="scenario.data.contexts"
           [selectedItem]="selectedItem"
-          [mode]="scenario.mode"
+          [mode]="scenario.data.mode"
         ></scenario-conception-item>
       </div>
     </div>
