--- a/bot/admin/web/src/app/theme/styles/themes.scss
+++ b/bot/admin/web/src/app/theme/styles/themes.scss
@@ -40,7 +40,8 @@ $nb-themes: nb-register-theme(
     slide-out-background: #f7f9fc,
     slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
     slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
-    tree-grid-cell-border-width: 3px
+    tree-grid-cell-border-width: 3px,
+    accordion-shadow: none
   ),
   default,
   default
@@ -66,7 +67,8 @@ $nb-themes: nb-register-theme(
 
     slide-out-background: #252547,
     slide-out-shadow-color: 2px 0 3px #29157a,
-    slide-out-shadow-color-rtl: -2px 0 3px #29157a
+    slide-out-shadow-color-rtl: -2px 0 3px #29157a,
+    accordion-shadow: none
   ),
   cosmic,
   cosmic
@@ -94,7 +96,8 @@ $nb-themes: nb-register-theme(
     slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
     slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
 
-    tree-grid-cell-border-width: 3px
+    tree-grid-cell-border-width: 3px,
+    accordion-shadow: none
   ),
   corporate,
   corporate
@@ -122,7 +125,8 @@ $nb-themes: nb-register-theme(
     slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
     slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
 
-    tree-grid-cell-border-width: 3px
+    tree-grid-cell-border-width: 3px,
+    accordion-shadow: none
   ),
   dark,
   dark
