feat(scenario-designer): storage of sentences modifications

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.scss
@@ -5,5 +5,13 @@
   .questions {
     overflow-y: auto;
     max-height: 15rem;
+
+    .sentences-list {
+      padding: 0;
+      margin-bottom: 0;
+      .sentences-list-item {
+        border-bottom: 1px solid #edf1f7;
+      }
+    }
   }
 }
