feat(scenario-designer): store deletion of entities on existing sentences

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
@@ -119,7 +119,7 @@
               [allEntities]="entitiesCache"
               (componentActivated)="componentActivated($event)"
               (entityAdded)="entityAdded()"
-              (storeModifiedSentence)="sentenceModified($event)"
+              (storeModifiedSentence)="storeModifiedSentence($event)"
             ></scenario-sentence-edit>
           </li>
         </ng-container>
