--- a/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.html
+++ b/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.html
@@ -16,9 +16,43 @@
   </nb-card-header>
 
   <nb-card-body class="card-body">
+    <header class="d-flex flex-wrap justify-content-end gap-1 mb-2">
+      <input
+        nbInput
+        id="spacing"
+        type="number"
+        min="2"
+        max="10"
+        step="2"
+        placeholder="Change spacing"
+        nbTooltip="Change indent"
+        [(ngModel)]="spacing"
+        (ngModelChange)="spacingChange()"
+      />
+      <button
+        nbButton
+        ghost
+        shape="round"
+        nbTooltip="Copy to clipboard"
+        (click)="copyToClipboard()"
+      >
+        <nb-icon icon="copy-outline"></nb-icon>
+      </button>
+    </header>
     <pre
+      class="previewer"
       [class]="theme"
-      [innerHTML]="data"
-    ></pre>
+    >
+      <div class="lines-number">
+        <div *ngFor="let item of [].constructor(data.length); let i = index">{{ i + 1 }}</div>
+      </div>
+
+      <div class="lines-container d-flex flex-column">
+        <div class="d-flex" *ngFor="let d of data">
+          <span [innerHtml]="syntaxHighlight(d)"></span>
+        </div>
+
+      </div>
+    </pre>
   </nb-card-body>
 </nb-card>
