--- a/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.scss
+++ b/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.scss
@@ -6,50 +6,79 @@ pre {
   padding: 0.5rem;
   margin: 0;
 
-  &.default span {
-    &.key {
-      color: #c792cc;
-    }
-    &.comma,
-    &.delimiter {
-      color: gray;
-    }
-
-    &.boolean {
-      color: firebrick;
+  &.previewer {
+    display: flex;
+    & .lines-number {
+      display: flex;
+      flex-direction: column;
+      text-align: right;
+      padding-right: 1rem;
+      border-right: 2px solid;
     }
 
-    &.null {
-      color: gray;
-    }
-
-    &.number {
-      color: blue;
-    }
-
-    &.string {
-      color: green;
+    & .lines-container {
+      padding-left: 1rem;
     }
   }
 
-  &.dark span {
-    &.key {
-      color: #c792cc;
+  &.default {
+    & .lines-number {
+      color: #237893;
+      border-color: #237893;
     }
 
-    &.delimiter,
-    &.comma,
-    &.boolean,
-    &.null {
-      color: #6cddf0;
+    & span {
+      &.key {
+        color: #c792cc;
+      }
+      &.comma,
+      &.delimiter {
+        color: gray;
+      }
+
+      &.boolean {
+        color: firebrick;
+      }
+
+      &.null {
+        color: gray;
+      }
+
+      &.number {
+        color: blue;
+      }
+
+      &.string {
+        color: green;
+      }
+    }
+  }
+
+  &.dark {
+    & .lines-number {
+      color: #858585;
+      border-color: #858585;
     }
 
-    &.number {
-      color: #e95f3c;
-    }
+    & span {
+      &.key {
+        color: #c792cc;
+      }
 
-    &.string {
-      color: #c3e741;
+      &.delimiter,
+      &.comma,
+      &.boolean,
+      &.null {
+        color: #6cddf0;
+      }
+
+      &.number {
+        color: #e95f3c;
+      }
+
+      &.string {
+        color: #c3e741;
+      }
     }
   }
 }
