--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
@@ -81,7 +81,7 @@
     <hr class="my-2" />
 
     <strong> Questions matching this Intent :</strong>
-    <div class="questions">
+    <div class="questions mt-1">
       <ul class="sentences-list">
         <li
           *ngFor="let sentence of sentences.value"
