test(shared): add TU to json previewer component

--- a/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.html
+++ b/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.html
@@ -47,7 +47,7 @@
         <div *ngFor="let item of [].constructor(data.length); let i = index">{{ i + 1 }}</div>
       </div>
 
-      <div class="lines-container d-flex flex-column">
+      <div class="lines-container">
         <div class="d-flex" *ngFor="let d of data">
           <span [innerHtml]="syntaxHighlight(d)"></span>
         </div>
