--- a/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.scss
+++ b/bot/admin/web/src/app/shared/json-previewer/json-previewer.component.scss
@@ -17,6 +17,8 @@ pre {
     }
 
     & .lines-container {
+      display: flex;
+      flex-direction: column;
       padding-left: 1rem;
     }
   }
