fix(shared): fix close button status when the modalStatus is not primary

--- a/bot/admin/web/src/app/shared/choice-dialog/choice-dialog.component.html
+++ b/bot/admin/web/src/app/shared/choice-dialog/choice-dialog.component.html
@@ -4,7 +4,7 @@
 
     <button
       *ngIf="cancellable"
-      status="primary"
+      [status]="modalStatus"
       type="button"
       nbButton
       shape="round"
