fix(scenarios): update title

--- a/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
+++ b/bot/admin/web/src/app/scenarios/scenarios-list/scenarios-list.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-wrap mb-2">
-  <h1 class="flex-grow-1">Scenarios management</h1>
+  <h1 class="flex-grow-1">Scenarios Management</h1>
 
   <section class="grid-actions">
     <button
