feat(scenario-production): allow multiple use of an intent in the SM + typing

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/scenario-production.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/scenario-production.component.html
@@ -6,12 +6,12 @@
         <div
           class="intent d-flex my-1 unselectable"
           *ngFor="let intent of getScenarioIntentDefinitions()"
-          [ngClass]="{ disabled: isIntentInUse(intent) }"
+          [ngClass]="{ disabled: !isIntentDraggable(intent) }"
           [nbTooltip]="getIntentTooltip(intent)"
           [dndDraggable]="{ type: 'intent', name: intent.name }"
           [dndType]="getDraggableIntentType(intent)"
           dndHandle
-          [dndDisableIf]="isIntentInUse(intent)"
+          [dndDisableIf]="!isIntentDraggable(intent)"
         >
           <nb-icon
             *ngIf="intent.primary"
