feat(scenario-production): change colors to manage default/dark mode and accessibility

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/scenario-production.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/scenario-production.component.scss
@@ -1,3 +1,6 @@
+@import '~@nebular/theme/styles/theming';
+@import '~@nebular/theme/styles/themes';
+
 :host {
   display: block;
   margin-left: -2.25rem;
@@ -8,72 +11,93 @@
   box-shadow: inset 2px 2px 5px rgba($color: #000000, $alpha: 0.1);
 }
 
-.production-wrapper {
-  height: 100%;
-  width: 100%;
+@include nb-install-component {
+  .production-wrapper {
+    height: 100%;
+    width: 100%;
 
-  .production-menu {
-    height: auto;
-    width: 17rem;
-    box-shadow: 2px 2px 5px rgba($color: #000000, $alpha: 0.1);
+    .production-menu {
+      height: auto;
+      width: 17rem;
+      box-shadow: 2px 2px 5px rgba($color: #000000, $alpha: 0.1);
 
-    .intents-wrapper {
-      height: 42%;
-      .intents-list {
-        height: 92%;
-        max-height: 92%;
-        overflow: auto;
-        font-size: 0.8rem;
-        .intent {
-          padding: 0.2rem 0.6rem;
-          background-color: #ccc;
-          border-radius: 1rem;
-          color: white;
-          cursor: move;
+      .intents-wrapper {
+        height: 42%;
+        .intents-list {
+          height: 92%;
+          max-height: 92%;
+          overflow: auto;
+          font-size: 0.8rem;
+          .intent {
+            padding: 0.2rem 0.6rem;
+            background-color: nb-theme(color-info-active);
+            border-radius: 1rem;
+            color: nb-theme(text-control-color);
+            cursor: move;
 
-          &.disabled {
-            background-color: #ddd;
-            cursor: default;
+            &.disabled {
+              background-color: nb-theme(color-info-disabled);
+              color: nb-theme(text-basic-color);
+              cursor: not-allowed;
+            }
+          }
+        }
+      }
+      .menu-separator {
+        margin-left: -1rem;
+        margin-right: -1rem;
+      }
+      .actions-wrapper {
+        height: 42%;
+        .actions-list {
+          height: 92%;
+          max-height: 92%;
+          overflow: auto;
+          font-size: 0.8rem;
+          .action {
+            background-color: nb-theme(color-basic-700);
+            color: nb-theme(text-control-color);
+            border-radius: 0.25rem;
+            cursor: move;
+
+            &.disabled {
+              background-color: nb-theme(color-basic-transparent-600);
+              color: nb-theme(text-basic-color);
+              cursor: not-allowed;
+            }
           }
         }
       }
     }
-    .menu-separator {
-      margin-left: -1rem;
-      margin-right: -1rem;
-    }
-    .actions-wrapper {
-      height: 42%;
-      .actions-list {
-        height: 92%;
-        max-height: 92%;
-        overflow: auto;
-        font-size: 0.8rem;
-        .action {
-          color: white;
-          background-color: #aaa;
-          border-radius: 0.25rem;
-          cursor: move;
 
-          &.disabled {
-            background-color: #ddd;
-            cursor: default;
-          }
-        }
+    .production-canvas-wrapper {
+      width: fit-content;
+      padding: 0.5rem;
+      overflow: hidden;
+      .production-canvas {
+        position: relative;
+        width: fit-content;
+        transition: transform 0.3s;
+        transform-origin: 0 0;
+        padding: 20px;
       }
     }
   }
 
-  .production-canvas-wrapper {
-    width: fit-content;
-    padding: 0.5rem;
-    overflow: hidden;
-    .production-canvas {
-      position: relative;
-      width: fit-content;
-      transition: transform 0.3s;
-      transform-origin: 0 0;
-      padding: 20px;
-    }
+  .actions-list::-webkit-scrollbar,
+  .intents-list::-webkit-scrollbar {
+    width: nb-theme(scrollbar-width);
+    height: nb-theme(scrollbar-width);
+  }
+
+  .actions-list::-webkit-scrollbar-thumb,
+  .intents-list::-webkit-scrollbar-thumb {
+    background: nb-theme(scrollbar-color);
+    cursor: pointer;
+    border-radius: nb-theme(scrollbar-width / 2);
+  }
+  .actions-list::-webkit-scrollbar-track,
+  .intents-list::-webkit-scrollbar-track {
+    background: nb-theme(scrollbar-background-color);
   }
 }
