--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group.component.scss
@@ -1,34 +1,39 @@
-.stateGroup {
-  font-size: 0.8rem;
-  border: 2px solid #aaa;
-  min-width: 10rem;
-  width: fit-content;
+@import '~@nebular/theme/styles/theming';
+@import '~@nebular/theme/styles/themes';
 
-  margin-bottom: 20px;
-  border-radius: 0.25rem;
+@include nb-install-component {
+  .stateGroup {
+    font-size: 0.8rem;
+    border: 2px solid nb-theme(color-basic-700);
+    min-width: 10rem;
+    width: fit-content;
 
-  .stateGroup-header {
-    display: flex;
-    justify-content: space-between;
-    color: white;
-    background-color: #aaa;
-    padding: 0.3rem 0.7rem;
-    margin: -1px;
-  }
-  .stateGroup-body {
-    min-height: 3rem;
-    .transitions-wrapper {
-      position: relative;
+    margin-bottom: 20px;
+    border-radius: 0.25rem;
+
+    .stateGroup-header {
+      display: flex;
+      justify-content: space-between;
+      color: nb-theme(text-control-color);
+      background-color: nb-theme(color-basic-700);
+      padding: 0.3rem 0.7rem;
+      margin: -1px;
     }
-    .actions-wrapper {
-      padding: 20px 20px 0 20px;
+    .stateGroup-body {
+      min-height: 3rem;
+      .transitions-wrapper {
+        position: relative;
+      }
+      .actions-wrapper {
+        padding: 20px 20px 0 20px;
+      }
     }
-  }
 
-  &.dragHover {
-    border-color: #666;
-    > .stateGroup-header {
-      background-color: #666;
+    &.dragHover {
+      border-color: nb-theme(color-basic-transparent-600);
+      > .stateGroup-header {
+        background-color: nb-theme(color-basic-transparent-600);
+      }
     }
   }
 }
