--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/transition/transition.component.scss
@@ -1,11 +1,17 @@
+@import '~@nebular/theme/styles/theming';
+@import '~@nebular/theme/styles/themes';
+
+@include nb-install-component {
+  background-color: nb-theme(color-info-active);
+  color: nb-theme(text-control-color);
+}
+
 :host {
   display: flex;
   justify-content: space-between;
   position: absolute;
   padding: 0.2rem 0.6rem;
-  background-color: #ccc;
   border-radius: 1rem;
-  color: white;
   margin-left: 15px;
   max-width: 180px;
   :before {
