--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
@@ -5,7 +5,7 @@
     </h4>
   </div>
 
-  <div class="col-auto text-right d-flex">
+  <div class="col-auto text-right d-flex align-items-center">
     <button
       nbButton
       size="small"
