--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.scss
@@ -1,189 +1,189 @@
 @import '~@nebular/theme/styles/theming';
 @import '~@nebular/theme/styles/themes';
 
-.canvas-wrapper {
-  position: relative;
-  z-index: 10;
-  margin-left: -2.25rem;
-  margin-right: -2.25rem;
-  margin-bottom: -0.75rem;
-  height: 75vh;
-  overflow: hidden;
+@include nb-install-component {
+  .canvas-wrapper {
+    position: relative;
+    z-index: 10;
+    margin-left: -2.25rem;
+    margin-right: -2.25rem;
+    margin-bottom: -0.75rem;
+    height: 75vh;
+    overflow: hidden;
 
-  .contexts-panel {
-    position: absolute;
-    z-index: 5;
-
-    // comment récupérer la version dark-theme de la variable ?
-    background-color: nb-theme(color-basic-300);
-
-    box-shadow: inset 2px 2px 5px rgba($color: #000000, $alpha: 0.1),
-      2px 2px 5px rgba($color: #000000, $alpha: 0.1);
-    width: 2rem;
-    border-bottom-right-radius: 0.5rem;
-    transition: width 0.2s;
-
-    .panel-header-wrapper {
-      display: flex;
-      justify-content: flex-end;
-      padding: 0.5rem 0 0 0;
-      .panel-header {
-        width: 100%;
-        padding: 0.5rem;
-        writing-mode: vertical-rl;
-        text-orientation: mixed;
-        margin-right: -0.2rem;
-        .chevron-left {
-          display: none;
-        }
-        .chevron-right {
-          display: block;
-          margin-right: 0.15rem;
-        }
-      }
-    }
-
-    .contexts-list {
-      display: none;
-      overflow-y: auto;
-      max-height: 30rem;
-
-      .context-name {
-        max-width: 12rem;
-      }
-
-      .entity {
-        border-radius: 0.45rem;
-        padding: 0rem 0.3rem 0rem 0.3rem;
-        font-size: 0.7rem;
-        display: inline-block;
-        line-height: 1.25rem;
-      }
-    }
-
-    .addContextButton {
-      display: none;
-    }
-
-    &.displayed {
-      width: 17rem;
+    .contexts-panel {
+      position: absolute;
+      z-index: 5;
+      background-color: nb-theme(background-basic-color-1);
+      box-shadow: inset 2px 2px 5px rgba($color: #000000, $alpha: 0.1),
+        2px 2px 5px rgba($color: #000000, $alpha: 0.1);
+      width: 2rem;
+      border-bottom-right-radius: 0.5rem;
+      transition: width 0.2s;
 
       .panel-header-wrapper {
-        justify-content: flex-start;
-        padding: 0.5rem;
+        display: flex;
+        justify-content: flex-end;
+        padding: 0.5rem 0 0 0;
         .panel-header {
-          writing-mode: initial;
-          text-orientation: initial;
+          width: 100%;
+          padding: 0.5rem;
+          writing-mode: vertical-rl;
+          text-orientation: mixed;
+          margin-right: -0.2rem;
           .chevron-left {
-            display: block;
+            display: none;
           }
           .chevron-right {
-            display: none;
+            display: block;
+            margin-right: 0.15rem;
           }
         }
       }
 
       .contexts-list {
-        display: block;
+        display: none;
+        overflow-y: auto;
+        max-height: 30rem;
+
+        .context-name {
+          max-width: 12rem;
+        }
+
+        .entity {
+          border-radius: 0.45rem;
+          padding: 0rem 0.3rem 0rem 0.3rem;
+          font-size: 0.7rem;
+          display: inline-block;
+          line-height: 1.25rem;
+        }
       }
+
       .addContextButton {
-        display: inherit;
-        margin: 1rem;
+        display: none;
+      }
+
+      &.displayed {
+        width: 17rem;
+
+        .panel-header-wrapper {
+          justify-content: flex-start;
+          padding: 0.5rem;
+          .panel-header {
+            writing-mode: initial;
+            text-orientation: initial;
+            .chevron-left {
+              display: block;
+            }
+            .chevron-right {
+              display: none;
+            }
+          }
+        }
+
+        .contexts-list {
+          display: block;
+        }
+        .addContextButton {
+          display: inherit;
+          margin: 1rem;
+        }
       }
     }
-  }
 
-  .canvas {
-    z-index: 1;
-    padding: 1.5rem;
-    width: 100vw;
-    height: 100vh;
-    transition: transform 0.3s;
-    transform-origin: 0 0;
-    .initialItem {
-      width: 1px;
-      margin: auto;
+    .canvas {
+      z-index: 1;
+      padding: 1.5rem;
+      width: 100vw;
+      height: 100vh;
+      transition: transform 0.3s;
+      transform-origin: 0 0;
+      .initialItem {
+        width: 1px;
+        margin: auto;
+      }
+    }
+
+    .canvas-shader {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      pointer-events: none;
+      box-shadow: inset 2px 2px 5px rgba($color: #000000, $alpha: 0.1);
     }
   }
 
-  .canvas-shader {
-    position: absolute;
+  .chat-wrapper {
+    position: fixed;
+    overflow-y: auto;
+    z-index: 10000;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    pointer-events: none;
-    box-shadow: inset 2px 2px 5px rgba($color: #000000, $alpha: 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.35);
   }
-}
 
-.chat-wrapper {
-  position: fixed;
-  overflow-y: auto;
-  z-index: 10000;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(255, 255, 255, 0.9);
-}
+  .chat-container {
+    width: 550px;
 
-.chat-container {
-  width: 550px;
-}
-
-.chat-controls {
-  display: flex;
-  text-align: center;
-  background-color: white;
-  padding: 1rem;
-  box-shadow: 0 0.5rem 1rem 0 #0e0e0e24;
-
-  .from {
-    IMG {
-      width: 5rem;
+    & nb-chat {
+      box-shadow: none;
     }
   }
 
-  .propositions {
-    flex-grow: 1;
-    .prop-button {
-      display: inline-block;
-      cursor: pointer;
-      padding: 0.5rem;
-      border: 1px solid gray;
-      border-radius: 0.3rem;
-      margin: 0.3rem;
-      background-color: rgba(238, 238, 238, 0.5);
-      &:hover {
-        background-color: rgba(238, 238, 238, 1);
+  .chat-controls {
+    display: flex;
+    text-align: center;
+    background-color: nb-theme(background-basic-color-3);
+    padding: 1rem;
+    box-shadow: 0 0.5rem 1rem 0 #0e0e0e24;
+    border-radius: 0 0 0.25rem 0.25rem;
+    transform: translateY(-0.25rem);
+
+    .from {
+      IMG {
+        width: 5rem;
+      }
+    }
+
+    .propositions {
+      flex-grow: 1;
+      .prop-button {
+        display: inline-block;
+        cursor: pointer;
+        padding: 0.5rem;
+        border: 1px solid gray;
+        border-radius: 0.3rem;
+        margin: 0.3rem;
+        background-color: nb-theme(color-basic-600);
+        &:hover {
+          background-color: nb-theme(color-basic-transparent-600);
+        }
       }
     }
   }
-}
 
-.font-2rem {
-  font-size: 2rem;
-}
+  .font-2rem {
+    font-size: 2rem;
+  }
 
-:host .contexts-list::-webkit-scrollbar-thumb {
-  cursor: pointer;
-  border-radius: 0.15625rem;
-}
+  .contexts-list::-webkit-scrollbar {
+    width: nb-theme(scrollbar-width);
+    height: nb-theme(scrollbar-width);
+  }
 
-.nb-theme-default :host .contexts-list::-webkit-scrollbar-thumb {
-  background: #e4e9f2;
-}
-.nb-theme-default :host .contexts-list::-webkit-scrollbar-track {
-  background: #f7f9fc;
-}
-
-.nb-theme-dark :host .contexts-list::-webkit-scrollbar-thumb {
-  background: #101426;
-}
-.nb-theme-dark :host .contexts-list::-webkit-scrollbar-track {
-  background: #192038;
+  .contexts-list::-webkit-scrollbar-thumb {
+    background: nb-theme(scrollbar-color);
+    cursor: pointer;
+    border-radius: nb-theme(scrollbar-width / 2);
+  }
+  .contexts-list::-webkit-scrollbar-track {
+    background: nb-theme(scrollbar-background-color);
+  }
 }
