feat(scenario-conception): check name conflicts when renaming an actionDefinition

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception-item.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception-item.component.html
@@ -280,6 +280,7 @@
           [contexts]="contexts"
           [selectedItem]="selectedItem"
           [mode]="mode"
+          [scenario]="scenario"
         ></scenario-conception-item>
       </div>
     </ng-container>
