--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.html
@@ -106,6 +106,7 @@
           [contexts]="scenario.data.contexts"
           [selectedItem]="selectedItem"
           [mode]="scenario.data.mode"
+          [scenario]="scenario"
         ></scenario-conception-item>
       </div>
     </div>
