fix(scenario|shared): fix bugs

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/scenario-conception.component.scss
@@ -181,7 +181,7 @@
   .contexts-list::-webkit-scrollbar-thumb {
     background: nb-theme(scrollbar-color);
     cursor: pointer;
-    border-radius: nb-theme(scrollbar-width / 2);
+    border-radius: calc(nb-theme(scrollbar-width) / 2);
   }
   .contexts-list::-webkit-scrollbar-track {
     background: nb-theme(scrollbar-background-color);
