--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
@@ -130,6 +130,7 @@
       <input
         #addSentenceInput
         nbInput
+        autofocusElement
         fullWidth
         id="newQuestion"
         type="text"
