--- a/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
@@ -31,8 +31,8 @@
         [required]="true"
       >
         <input
-          #nameInput
           nbInput
+          autofocusElement
           formControlName="name"
           fullWidth
           id="name"
