--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.html
@@ -31,6 +31,7 @@
             >
               <input
                 nbInput
+                autofocusElement
                 formControlName="name"
                 fullWidth
                 id="name"
