--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/context-create/context-create.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/context-create/context-create.component.html
@@ -31,6 +31,7 @@
             >
               <input
                 nbInput
+                autofocusElement
                 formControlName="name"
                 fullWidth
                 id="name"
@@ -49,7 +50,8 @@
     <button
       nbButton
       size="small"
-      status="basic"
+      status="primary"
+      outline
       class="m-1"
       (click)="cancel()"
     >
