feat(scaneario-designer): autofocusElement on context-create and intent-edit

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
@@ -135,6 +135,7 @@
         type="text"
         placeholder="Add a new question formulation and press enter"
         (keyup.enter)="addSentence()"
+        autofocusElement
       />
 
       <button
