--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/context-create/context-create.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/context-create/context-create.component.html
@@ -37,6 +37,7 @@
                 type="text"
                 placeholder="Enter new context name"
                 (blur)="formatContextName()"
+                autofocusElement
               />
             </tock-form-control>
           </div>
