feat(scenario-production): autofocus on add group name input modal

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group-add/state-group-add.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/state-group/state-group-add/state-group-add.component.html
@@ -37,6 +37,7 @@
                 type="text"
                 placeholder="Enter new group name"
                 (blur)="formatContextName()"
+                autofocusElement
               />
             </tock-form-control>
           </div>
