feat(sentence-edit): update the context list after adding a new context

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/sentence/sentence-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/sentence/sentence-edit.component.html
@@ -69,7 +69,7 @@
     </button>
 
     <div
-      *ngIf="!getContextOfEntity(token)"
+      *ngIf="!getContextOfEntity(token) && contexts.length"
       class="px-3 pb-3"
     >
       <hr class="mt-0 mb-2" />
